WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240739
Prevent NSAttributedString crashes when AppSSO URLs are provided
https://bugs.webkit.org/show_bug.cgi?id=240739
Summary
Prevent NSAttributedString crashes when AppSSO URLs are provided
Brent Fulgham
Reported
2022-05-20 14:57:21 PDT
Prevent NSAttributedString from crashing when an application attempts to handle content that includes a URL that might be handled by an AppSSO plugin.:wq
Attachments
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2022-05-20 15:00:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/862
Brent Fulgham
Comment 2
2022-05-20 15:03:45 PDT
<
rdar://93656000
>
EWS
Comment 3
2022-05-25 15:46:10 PDT
Committed
r294831
(
250981@main
): <
https://commits.webkit.org/250981@main
> Reviewed commits have been landed. Closing PR #862 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug